.k8s/00_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: m324-team1 # Ask the teacher for the namespace name
