.k8s/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: typescript-starter # Change this to your app name
  namespace: m324-team1 # Ask the teacher for the namespace name
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: typescript-starter # Change this to your app name
