.k8s/03_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typescript-starter # Change this to your app name
  namespace: m324-team1 # Ask the teacher for the namespace name
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - my-subdomain.m324a6.hackerman.ch # Change this to your base url example: my-subdomain.m324.hackerman.ch
      secretName: my-subdomain.m324a6.hackerman.ch-tls # Change this to your base url example: my-subdomain.m324.hackerman.ch-tls
  rules:
    - host: my-subdomain.m324a6.hackerman.ch # Change this to your base url example: my-subdomain.m324.hackerman.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typescript-starter # Change this to your app name
                port:
                  number: 80
